# idevicelocation

./: .gitignore  README.md  configure.ac
man/: Makefile.am  idevicelocation.1
src/: Makefile.am  idevicelocation.c
